test/elaboration/good/coreml_forall.mle
let
(main : int) = let ['a] (id : 'a -> 'a) = ['a] fun (x : 'a) -> x[] in id[int] 42