test/elaboration/bad/typeclass_overload_and_let_bound.mle
class H 'a { h : 'a -> int }
let (h : int) = 42